# BbCadam

./: .gitignore  LICENSE  MIGRATION_STRATEGY.md  README.md  STATUS.md  __init__.py  api.md  api.py  builder.py  profile.md  pyproject.toml  pytest.ini  script.json  script.py  setup.py
bbcadam/: __init__.py  api.py  builder.py  gui_watcher.py  watcher.py
bbcadam/backends/: __init__.py  part.py  sketcher.py
bbcadam/cli/: __init__.py  _runner_build.py  build.py  dump.py  launch.py  py_runner.py
bbcadam/core/: __init__.py  dsl_core.py  primitives.py  profiles.py
docs/: MIGRATION_STRATEGY.md  README.md  STATUS.md  TESTING.md  api.md  development.md  scaffolding.md  sketch.md
scripts/: bbcadam-py  dump.sh  install_generated_py.sh  launch_freecad_with_watcher.sh
tests/: README.md  __init__.py  conftest.py  dsl_box.py  dsl_cylinder.py  preview_clean.py  preview_test.py  test_array_grid.py  test_array_lattice.py  test_array_linear.py  test_cli.py  test_dsl.py  test_dsl_box.py  test_dsl_box_headless.py  test_dsl_box_transform.py  test_dsl_cut.py  test_dsl_cylinder.py  test_dsl_cylinder_r.py  test_dsl_cylinder_transform.py  test_dsl_fuse.py  test_dsl_fuse_overlap.py  test_imports.py  test_profile_arcs_errors.py  test_profile_arcs_modes.py  test_profile_arcs_modes2.py  test_profile_arcs_pad.py  test_profile_arcs_plane_xz.py  test_profile_arcs_radius_end_dir.py  test_profile_complex_path.py  test_radial_pattern.py  test_sketch_arcs_errors.py  test_sketch_arcs_modes.py  test_sketch_arcs_modes2.py  test_sketch_arcs_pad.py  test_sketch_arcs_plane_xz.py  test_sketch_arcs_radius_end_dir.py  test_sketch_complex_path.py
tests/fixtures/expected_outputs/: README.md
tests/fixtures/sample_parts/: README.md
tests/integration/: test_headless_build.py
tools/: build_headless.py  build_headless.sh  find_freecad.sh  install_generated_py.sh  launch_freecad_with_watcher.sh
tools/watcher/: watch_specs.py
watcher/: watch_specs.py
